<resources>
    <string name="app_name">CMPT-362-ChitChat</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email*</string>
    <string name="prompt_password">Password*</string>
    <string name="prompt_username">Username*</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_firstname">First Name</string>
    <string name="prompt_lastname">Last Name</string>
    <string name="prompt_gender">Gender</string>
    <string name="prompt_user">Search User</string>
    <string name="prompt_registeruser">All fields marked with * are required</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="action_sign_in">Login</string>
    <string name="register">Register a New Account!</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_private_chatroom">Private ChatRooms</string>
    <string name="title_public_chatroom">Public ChatRooms</string>
    <string name="title_new_chatroom">New ChatRoom</string>
    <string name="title_profile">Profile</string>
    <string name="add">Add</string>
    <string name="forgot">Forgot your username or password? Click Here!</string>
    <string name="prompt_forgotemail">Please enter the email of the account you would like to reset the password for</string>
    <string name="sample_message">Sample message</string>
    <string name="type_a_message">Type a message</string>
    <string name="sent_message">Sent message</string>
    <string name="receive_message">Receive message</string>
    <string name="delete_chatroom">Delete ChatRoom</string>
    <string name="enter_chat_room_name">Enter chat room name</string>
    <string name="video_call">Video call</string>
    <string name="sendemail">Send</string>
    <string name="back">Back to Login</string>
    <string name="other">Other</string>
    <string name="prompt_dob">Please enter your date of birth*</string>
    <string name="gender">Please Select Your Gender*</string>
    <string name="prompt_passwordconfirm">Confirm Password*</string>

    <!-- friends activity related -->
    <string name="start_chatroom">Start Chatroom</string>
    <string name="unfriend_user">Unfriend</string>
    <string name="users_list">Users list</string>
    <string name="add_friends">Add friends</string>
    <string name="enter_user_email">Enter user email</string>
    <string name="add_friend">Send Request</string>
    <string name="add_new_friends">Add new friends</string>
</resources>